BUGfix: Gtk-4.0 - fix extra gap in search bars

--- a/cinnamon/sass/_common.scss
+++ b/cinnamon/sass/_common.scss
@@ -1002,6 +1002,7 @@ StScrollBar {
 	background-color: if($variant == 'light', transparentize($selected_bg_color, 0.6), transparentize($selected_bg_color, 0.6));
 	//border-width: 0;
 	border: 1px solid $orange;
+	border-radius: 0.5em;
 	&:selected {
 		color: $selected_fg_color;
 		//@include bg_gradient(horizontal, $orange_gradient_start, $orange_gradient_end, 1);
