--- a/gtk-3.0/gtk-dark.css
+++ b/gtk-3.0/gtk-dark.css
@@ -4707,7 +4707,7 @@ treeview.view header button, treeview.view header button:hover, treeview.view he
  * Window Decorations *
  *********************/
 decoration {
-  border-radius: 4px 4px 0 0;
+  border-radius: 4px 4px 4px 4px;
   border-width: 0px;
   border-width: 0px;
   box-shadow: 0 4px 10px 2px rgba(255, 255, 255, 0);
